tests/errors/WriteUninitializedArray.imp
VAR
  a[42]
BEGIN
  WRITE a;
END
